started on data node system (its kinda similar to nbt actually...)